--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'chatbot-telegram'
+app = 'chatbot-telegrem'
 primary_region = 'hkg'
 
 [build]
