修改了requirements.txt内容

--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for chatbot-telegrem on 2025-03-12T05:25:30+08:00
+# fly.toml app configuration file generated for chatbot-telegrem-nameless-water-1268 on 2025-04-03T13:02:52+08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'chatbot-telegrem'
+app = 'chatbot-telegrem-nameless-water-1268'
 primary_region = 'hkg'
 
 [build]
@@ -13,29 +13,21 @@ primary_region = 'hkg'
   PORT = '8080'
 
 [[services]]
+  protocol = 'tcp'
   internal_port = 8000
-  protocol = "tcp"
+
+  [[services.ports]]
+    port = 80
+    handlers = ['http']
+
+  [[services.ports]]
+    port = 443
+    handlers = ['tls', 'http']
 
   [services.concurrency]
+    type = 'connections'
     hard_limit = 25
     soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls","http"]
-    port = 443
-
-#[http_service]
-#  internal_port = 8080
-#  force_https = true
-#  auto_stop_machines = 'stop'
-#  auto_start_machines = true
-#  min_machines_running = 0
-#  processes = ['app']
 
 [[vm]]
   size = 'shared-cpu-1x'
